--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -146,6 +146,9 @@ th {
 
 /* Images */
 
+.wp-block-image {
+  margin: 0;
+}
 .alignleft {
   float: left;
   margin: 0 $baseline-height $baseline-height 0;
@@ -171,12 +174,20 @@ img,
 .size-full,
 .size-large,
 .size-medium,
-.size-thumbnail {
+.size-thumbnail,
+.wp-block-image {
   max-width: 100%;
   height: auto;
+
+  figcaption {
+    @extend %twelve-pixels;
+    font-family: $pt-sans;
+    color: $color-gray-40;
+  }
 }
 .wp-caption-text,
-.gallery-caption {
+.gallery-caption,
+.wp-caption-dd {
   @extend %twelve-pixels;
   font-family: $pt-sans;
   color: $color-gray-40;
