--- a/styles/editor-style.css
+++ b/styles/editor-style.css
@@ -18,7 +18,9 @@ h2 {
   /* 24px */
 }
 
-img figcaption,
+.wp-caption-text,
+.gallery-caption,
+.wp-caption-dd, img figcaption,
 .alignright figcaption,
 .alignleft figcaption,
 .aligncenter figcaption,
@@ -28,9 +30,7 @@ img figcaption,
 .size-large figcaption,
 .size-medium figcaption,
 .size-thumbnail figcaption,
-.wp-block-image figcaption, .wp-caption-text,
-.gallery-caption,
-.wp-caption-dd {
+.wp-block-image figcaption {
   font-size: 0.75em;
   /* 12px / 16px */
   line-height: 1.5;
@@ -236,8 +236,8 @@ img figcaption,
   font-family: "PT Serif", serif;
 }
 
-.wp-block[data-align="wide"],
-.wp-block[data-align="full"] {
+.wp-block[data-align=wide],
+.wp-block[data-align=full] {
   max-width: none;
 }
 
@@ -265,3 +265,5 @@ img figcaption,
 .has-extra-large-font-size {
   font-size: 28px;
 }
+
+/*# sourceMappingURL=editor-style.css.map */
