--- a/style.css
+++ b/style.css
@@ -333,6 +333,12 @@ img figcaption,
   color: #666666;
 }
 
+.wp-block-social-links a,
+.wp-block-social-links a:link,
+.wp-block-social-links a:visited {
+  color: #fff;
+}
+
 /* Form styles */
 input[type=text],
 input[type=email],
