--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -132,6 +132,13 @@ th {
   th {
     border-color: $color-gray-86;
   }
+  figcaption {
+    @extend %twelve-pixels;
+    font-family: $pt-sans;
+    color: $color-gray-40;
+    margin: -18px 0 12px 0;
+    text-align: center;
+  }
 }
 .wp-block-table.is-style-stripes {
 
