--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ textarea {
 .size-large figcaption,
 .size-medium figcaption,
 .size-thumbnail figcaption,
-.wp-block-image figcaption {
+.wp-block-image figcaption, .wp-block-table figcaption {
   font-size: 0.75em;
   /* 12px / 16px */
   line-height: 1.5;
@@ -262,6 +262,12 @@ th {
 .wp-block-table td,
 .wp-block-table th {
   border-color: #DCDCDC;
+}
+.wp-block-table figcaption {
+  font-family: "PT Sans", sans-serif;
+  color: #666666;
+  margin: -18px 0 12px 0;
+  text-align: center;
 }
 
 .wp-block-table.is-style-stripes thead {
