fix for dropdown mobile menu buttons

--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -152,6 +152,10 @@
 .rtl .toggle-dropdown i {
   transform: rotate(180deg);
 }
+.rtl .toggle-dropdown {
+  left: auto;
+  right: 0;
+}
 .dropdown-navigation {
   position: relative;
   z-index: 39;
