--- a/sass/_post.scss
+++ b/sass/_post.scss
@@ -218,6 +218,8 @@
       float: left;
       border-bottom: none;
       margin-bottom: 0;
+      border-top: solid 1px $color-gray-86;
+      padding-top: $baseline-height * 0.75;
 
       &:nth-child(odd) {
         padding-right: $baseline-height/2;
@@ -229,10 +231,10 @@
         border-left: solid 1px $color-gray-86;
         margin-left: -1px;
       }
-      &:nth-child(3),
-      &:nth-child(4) {
-        border-top: solid 1px $color-gray-86;
-        padding-top: $baseline-height * 0.75;
+      &:nth-child(1),
+      &:nth-child(2) {
+        border-top: none;
+        padding-top: 0;
       }
     }
   }
