--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: three-columns, left-sidebar, right-sidebar, custom-logo, custom-menu, featured-images, rtl-language-support, sticky-post, theme-options, threaded-comments, translation-ready, blog, entertainment, news
 Text Domain: mission-news
+Tested up to: 5.4
+Requires PHP: 5.4
 
 Mission News WordPress Theme, Copyright 2020 Compete Themes
 Mission News is distributed under the terms of the GNU GPL
