--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -208,6 +208,12 @@ img,
 .wp-block-social-links a:visited {
   color: #fff;
 }
+.wp-block-group.alignwide,
+.wp-block-group .alignwide,
+.wp-block-group.alignfull,
+.wp-block-group .alignfull {
+  line-height: 1.5;
+}
 
 /* Form styles */
 
