--- a/sass/customizer.scss
+++ b/sass/customizer.scss
@@ -29,3 +29,10 @@
 #available-widgets [class*=ct_mission_news_post_list] .widget-title:before {
   content: "\f109";
 }
+#customize-control-social_icon_custom_1 ,
+#customize-control-social_icon_custom_2,
+#customize-control-social_icon_custom_3 {
+  padding-top: 18px;
+  margin-top: 18px;
+  border-top: solid 1px #d5d5d5;
+}
