--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -273,6 +273,16 @@
       height: 24px;
       border: solid 1px #000;
     }
+    .custom-icon {
+
+      img {
+        line-height: 0;
+        margin: 0;
+        width: 19px;
+        height: auto;
+        vertical-align: middle;
+      }
+    }
   }
   .site-header .social-media-icons {
     display: block;
