--- a/sass/_layout_double.scss
+++ b/sass/_layout_double.scss
@@ -15,7 +15,7 @@
 
   .layout-double:not(.bbpress) {
 
-    .entry:first-child {
+    .entry:first-child:not(.small) {
       border-bottom: none;
       padding-bottom: 0;
     }
@@ -28,19 +28,51 @@
       padding: $baseline-height/2 0;
       margin: 0;
 
-      &:nth-of-type(odd) {
-        padding-left: $baseline-height/2;
-        margin-left: -1px;
-        border-left: solid 1px $color-gray-86;
-      }
-      &:nth-of-type(even) {
-        padding-right: $baseline-height/2;
-        clear: left;
-        border-right: solid 1px $color-gray-86;
-      }
+      // &:nth-of-type(odd) {
+      //   padding-left: $baseline-height/2;
+      //   margin-left: -1px;
+      //   border-left: solid 1px $color-gray-86;
+      // }
+      // &:nth-of-type(even) {
+      //   padding-right: $baseline-height/2;
+      //   clear: left;
+      //   border-right: solid 1px $color-gray-86;
+      // }
       .post-title {
         font-size: 1.125em; /* 18px / 16px */
         line-height: 1.333; /* 24px */
+      }
+    }
+    &.small-first-post {
+
+      .double {
+  
+        &:nth-of-type(even) {
+          padding-left: $baseline-height/2;
+          margin-left: -1px;
+          border-left: solid 1px $color-gray-86;
+        }
+        &:nth-of-type(odd) {
+          padding-right: $baseline-height/2;
+          clear: left;
+          border-right: solid 1px $color-gray-86;
+        }
+      }
+    }
+    &:not(.small-first-post) {
+  
+      .double {
+        
+        &:nth-of-type(odd) {
+          padding-left: $baseline-height/2;
+          margin-left: -1px;
+          border-left: solid 1px $color-gray-86;
+        }
+        &:nth-of-type(even) {
+          padding-right: $baseline-height/2;
+          clear: left;
+          border-right: solid 1px $color-gray-86;
+        }
       }
     }
   }
