--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -64,6 +64,16 @@
   }
 }
 
+@media all and (max-width: 799px) {
+
+  .hide-left-sidebar .sidebar-left {
+    display: none;
+  }
+  .hide-right-sidebar .sidebar-right {
+    display: none;
+  }
+}
+
 @media all and (min-width: $eight-hundred) {
 
   .sidebar {
