--- a/style.css
+++ b/style.css
@@ -3342,20 +3342,26 @@ a img {
 .layout-no-sidebar-wide .archive-header {
     text-align: center;
   }
-  .layout-no-sidebar .entry:first-child .post-header,
-.layout-no-sidebar-wide .entry:first-child .post-header {
+  .layout-no-sidebar:not(.small-first-post):not(.blog) .entry:first-child .post-header, .layout-no-sidebar:not(.small-first-post):not(.archive) .entry:first-child .post-header, .layout-no-sidebar:not(.small-first-post):not(.search) .entry:first-child .post-header,
+.layout-no-sidebar-wide:not(.small-first-post):not(.blog) .entry:first-child .post-header,
+.layout-no-sidebar-wide:not(.small-first-post):not(.archive) .entry:first-child .post-header,
+.layout-no-sidebar-wide:not(.small-first-post):not(.search) .entry:first-child .post-header {
     position: relative;
     left: -14%;
     width: 128%;
     margin: 1.125em 0 1.5em;
   }
-  .layout-no-sidebar .entry:first-child .post-title,
-.layout-no-sidebar-wide .entry:first-child .post-title {
+  .layout-no-sidebar:not(.small-first-post):not(.blog) .entry:first-child .post-title, .layout-no-sidebar:not(.small-first-post):not(.archive) .entry:first-child .post-title, .layout-no-sidebar:not(.small-first-post):not(.search) .entry:first-child .post-title,
+.layout-no-sidebar-wide:not(.small-first-post):not(.blog) .entry:first-child .post-title,
+.layout-no-sidebar-wide:not(.small-first-post):not(.archive) .entry:first-child .post-title,
+.layout-no-sidebar-wide:not(.small-first-post):not(.search) .entry:first-child .post-title {
     font-size: 2.375em;
     line-height: 1.342;
   }
-  .layout-no-sidebar .featured-image ~ .caption,
-.layout-no-sidebar-wide .featured-image ~ .caption {
+  .layout-no-sidebar:not(.small-first-post):not(.blog) .featured-image ~ .caption, .layout-no-sidebar:not(.small-first-post):not(.archive) .featured-image ~ .caption, .layout-no-sidebar:not(.small-first-post):not(.search) .featured-image ~ .caption,
+.layout-no-sidebar-wide:not(.small-first-post):not(.blog) .featured-image ~ .caption,
+.layout-no-sidebar-wide:not(.small-first-post):not(.archive) .featured-image ~ .caption,
+.layout-no-sidebar-wide:not(.small-first-post):not(.search) .featured-image ~ .caption {
     text-align: center;
   }
 
@@ -3410,6 +3416,11 @@ a img {
   }
   .layout-no-sidebar-full-width .loop-container {
     position: static;
+  }
+
+  .layout-double.small-first-post .entry:first-child .featured-image {
+    width: 100%;
+    left: 0;
   }
 }
 .bbpress #bbpress-forums .bbp-forums .entry,
