--- a/style.css
+++ b/style.css
@@ -567,6 +567,10 @@ a img {
   left: 0;
 }
 
+.entry.double.small .sticky-status {
+  top: 12px;
+}
+
 .rtl .has-post-thumbnail .sticky-status {
   left: 0;
   right: auto;
