--- a/sass/_widget_areas.scss
+++ b/sass/_widget_areas.scss
@@ -52,6 +52,7 @@
   padding-bottom: $baseline-height * 0.75;
   border-bottom: solid 1px $color-gray-86;
   margin-bottom: $baseline-height * 0.75;
+  clear: both;
 }
 
 @media all and (min-width: $six-hundred) {
